--- a/roles/radiusdesk/tasks/Freeradius_RedHat.yml
+++ b/roles/radiusdesk/tasks/Freeradius_RedHat.yml
@@ -1,29 +1,29 @@
 ---
-- name: Adding RadiusDesk MAO Yum Repository (RHEL/CentOS 6.x/7.x)
+- name: Adding RadiusDesk MAO Yum Repository (RHEL/CentOS 6+)
   template:
     dest="/etc/yum.repos.d/maomuffy.repo"
     src="maomuffy.repo.j2"
 
-- name: Installing Freeradius for RadiusDesk (RHEL/CentOS 6.x/7.x)
+- name: Installing Freeradius for RadiusDesk (RHEL/CentOS 6+)
   yum:
     name={{ item }}
     state=present
   with_items: "{{ freeradius_pkgs }}"
   # ignore_errors: yes
 
-- name: Checking if we already have Freeradius Configuration Directory Backup (RHEL/CentOS 6.x/7.x)
+- name: Checking if we already have Freeradius Configuration Directory Backup (RHEL/CentOS 6+)
   stat:
     path="{{ freeradius_conf_dir | quote }}_orig"
   register: fr_bk
 
-- name: Renaming Freeradius Configuration Directory (RHEL/CentOS 6.x/7.x)
+- name: Renaming Freeradius Configuration Directory (RHEL/CentOS 6+)
   shell: cp -afR {{ freeradius_conf_dir | quote }} {{ freeradius_conf_dir | quote }}_orig
   when: fr_bk.stat.exists == False
 
-- name: Removing Old Freeradius Configuration Directory (RHEL/CentOS 6.x/7.x)
+- name: Removing Old Freeradius Configuration Directory (RHEL/CentOS 6+)
   shell: rm -rf {{ freeradius_conf_dir | quote }}
 
-- name: Extracting RadiusDesk Freeradius Configuration (RHEL/CentOS 6.x/7.x)
+- name: Extracting RadiusDesk Freeradius Configuration (RHEL/CentOS 6+)
   unarchive:
     src="{{ nginx_webroot }}/cake2/rd_cake/Setup/Radius/freeradius-3-radiusdesk.tar.gz"
     dest={{ temp_src_dir }}/
@@ -32,13 +32,13 @@
     mode=0664
     copy=no
 
-- name: Configuring Freeradius Configuration Directory (RHEL/CentOS 6.x/7.x)
+- name: Configuring Freeradius Configuration Directory (RHEL/CentOS 6+)
   shell: 
     "mv {{ temp_src_dir | quote }}/freeradius {{ freeradius_conf_dir | quote }} &&
     chown -R {{ freeradius_user | quote }}:{{ freeradius_group | quote }} {{ freeradius_conf_dir | quote }} &&
     chmod -R 0755 {{ freeradius_conf_dir | quote }}"
 
-- name: Configuring RadiusDesk Freeradius radiusd.conf (RHEL/CentOS 6.x/7.x)
+- name: Configuring RadiusDesk Freeradius radiusd.conf (RHEL/CentOS 6+)
   template: 
     dest={{ freeradius_conf_dir }}/radiusd.conf
     owner={{ freeradius_user }}
@@ -46,7 +46,7 @@
     mode=0664
     src="radius/radiusd.conf.j2"
 
-- name: Configuring RadiusDesk Freeradius Dictionary (RHEL/CentOS 6.x/7.x)
+- name: Configuring RadiusDesk Freeradius Dictionary (RHEL/CentOS 6+)
   template: 
     dest={{ freeradius_conf_dir }}/dictionary
     owner={{ freeradius_user }}
@@ -54,13 +54,13 @@
     mode=0664
     src="radius/dictionary.j2"
 
-- name: Configuring RadiusDesk Freeradius Checkrad Script (RHEL/CentOS 6.x/7.x)
+- name: Configuring RadiusDesk Freeradius Checkrad Script (RHEL/CentOS 6+)
   template: 
     dest={{ freeradius_sbin_dir }}/checkrad
     mode=0777
     src="radius/checkrad.j2"
 
-- name: Configuring RadiusDesk Freeradius Dynamic Clients (RHEL/CentOS 6.x/7.x)
+- name: Configuring RadiusDesk Freeradius Dynamic Clients (RHEL/CentOS 6+)
   template: 
     dest="{{ freeradius_conf_dir }}/sites-enabled/dynamic-clients"
     owner={{ freeradius_user }}
@@ -68,13 +68,13 @@
     mode=0644
     src="radius/dynamic-clients.j2"
 
-- name: Correcting radclient paths for radscenario.pl Script (RHEL/CentOS 6.x/7.x)
+- name: Correcting radclient paths for radscenario.pl Script (RHEL/CentOS 6+)
   template: 
     dest="{{ nginx_webroot }}/cake2/rd_cake/Setup/Scripts/radscenario.pl"
     mode=0777
     src="radius/radscenario.pl.j2"
 
-- name: Correcting RadiusDesk paths for Freeradius (RHEL/CentOS 6.x/7.x)
+- name: Correcting RadiusDesk paths for Freeradius (RHEL/CentOS 6+)
   template:
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/RadiusDesk.php"
     group={{ web_group }}
@@ -82,7 +82,7 @@
     src=RadiusDesk.php.j2
     validate='php -l %s'
 
-- name: Correcting MESHDesk paths for Freeradius (RHEL/CentOS 6.x/7.x)
+- name: Correcting MESHDesk paths for Freeradius (RHEL/CentOS 6+)
   template:
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/MESHdesk.php"
     group={{ web_group }}
@@ -90,7 +90,7 @@
     src=MESHdesk.php.j2
     validate='php -l %s'
 
-- name: Correcting APProfiles paths for Freeradius (RHEL/CentOS 6.x/7.x)
+- name: Correcting APProfiles paths for Freeradius (RHEL/CentOS 6+)
   template:
     dest="{{ nginx_webroot }}/cake2/rd_cake/Config/ApProfiles.php"
     group={{ web_group }}
@@ -98,13 +98,13 @@
     src=ApProfiles.php.j2
     validate='php -l %s'
 
-- name: Configuring radmin_wrapper.pl Script for RadiusDesk (RHEL/CentOS 6.x/7.x)
+- name: Configuring radmin_wrapper.pl Script for RadiusDesk (RHEL/CentOS 6+)
   template: 
     dest="{{ nginx_webroot }}/cake2/rd_cake/Setup/Scripts/radmin_wrapper.pl"
     src="radius/radmin_wrapper.pl.j2"
     mode=0777
 
-- name: Ensuring Webroot User can use sudo (RHEL/CentOS 6.x/7.x)
+- name: Ensuring Webroot User can use sudo (RHEL/CentOS 6+)
   lineinfile:
     dest: /etc/sudoers
     state: present
@@ -113,7 +113,7 @@
     line: '{{ web_user }} ALL = NOPASSWD:{{ nginx_webroot }}/cake2/rd_cake/Setup/Scripts/radmin_wrapper.pl'
     validate: 'visudo -cf %s'
 
-- name: Ensuring Freeradius is ready for use (RHEL/CentOS 6.x/7.x)
+- name: Ensuring Freeradius is ready for use (RHEL/CentOS 6+)
   service: 
     enabled=yes
     name={{ freeradius_service_name }}
