--- a/roles/radiusdesk/tasks/main.yml
+++ b/roles/radiusdesk/tasks/main.yml
@@ -1,49 +1,49 @@
 ---
 # Loading variables
-- name: Adding RadiusDesk Variables (Ubuntu)
+- name: Adding RadiusDesk Variables (Ubuntu 14+)
   include_vars: "{{ ansible_os_family }}.yml"
   when: ansible_os_family == 'Debian'
 
-- name: Adding RadiusDesk Variables (RHEL/CentOS 6.x/7.x)
+- name: Adding RadiusDesk Variables (RHEL/CentOS 6+)
   include_vars: "{{ ansible_os_family }}.yml"
-  when: ansible_os_family == 'RedHat' and (ansible_distribution_major_version == '6' or ansible_distribution_major_version == '7')
+  when: ansible_os_family == 'RedHat' and ansible_distribution_major_version >= '6'
 
-- name: RadiusDesk Nginx Setup (Ubuntu)
+- name: RadiusDesk Nginx Setup (Ubuntu 14+)
   include: Nginx_Debian.yml
-  when: ansible_distribution == 'Ubuntu' and (ansible_distribution_version == '14.04' or ansible_distribution_version == '15.04' or ansible_distribution_version == '15.10')
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14.04'
 
-- name: RadiusDesk Nginx Setup (RHEL/CentOS 6.x/7.x)
+- name: RadiusDesk Nginx Setup (RHEL/CentOS 6+)
   include: "Nginx_RedHat.yml"
-  when: ansible_os_family == 'RedHat' and (ansible_distribution_major_version == '6' or ansible_distribution_major_version == '7')
+  when: ansible_os_family == 'RedHat' and ansible_distribution_major_version >= '6'
 
-- name: RadiusDesk Freeradius Setup (Ubuntu)
+- name: RadiusDesk Freeradius Setup (Ubuntu 14+)
   include: "Freeradius_Debian.yml"
-  when: ansible_distribution == 'Ubuntu' and (ansible_distribution_version == '14.04' or ansible_distribution_version == '15.04' or ansible_distribution_version == '15.10')
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14.04'
 
-- name: RadiusDesk Freeradius Setup (RHEL/CentOS 6.x/7.x)
+- name: RadiusDesk Freeradius Setup (RHEL/CentOS 6+)
   include: "Freeradius_RedHat.yml"
-  when: ansible_os_family == 'RedHat' and (ansible_distribution_major_version == '6' or ansible_distribution_major_version == '7')
+  when: ansible_os_family == 'RedHat' and ansible_distribution_major_version >= '6'
 
-- name: RadiusDesk Nodejs Setup (Ubuntu)
+- name: RadiusDesk Nodejs Setup (Ubuntu 14+)
   include: "Nodejs_Debian.yml"
-  when: ansible_distribution == 'Ubuntu' and (ansible_distribution_version == '14.04' or ansible_distribution_version == '15.04' or ansible_distribution_version == '15.10')
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14.04'
 
-- name: RadiusDesk Nodejs Setup (RHEL/CentOS 6.x/7.x)
+- name: RadiusDesk Nodejs Setup (RHEL/CentOS 6+)
   include: "Nodejs_RedHat.yml"
-  when: ansible_os_family == 'RedHat' and (ansible_distribution_major_version == '6' or ansible_distribution_major_version == '7')
+  when: ansible_os_family == 'RedHat' and ansible_distribution_major_version >= '6'
 
-- name: RadiusDesk PPTPD Setup (Ubuntu)
+- name: RadiusDesk PPTPD Setup (Ubuntu 14+)
   include: "Pptpd_Debian.yml"
-  when: enable_pptpd_support and ansible_distribution == 'Ubuntu' and (ansible_distribution_version == '14.04' or ansible_distribution_version == '15.04' or ansible_distribution_version == '15.10')
+  when: enable_pptpd_support and ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14.04'
 
-- name: RadiusDesk PPTPD Setup (RHEL/CentOS 6.x/7.x)
+- name: RadiusDesk PPTPD Setup (RHEL/CentOS 6+)
   include: "Pptpd_RedHat.yml"
-  when: enable_pptpd_support and ansible_os_family == 'RedHat' and (ansible_distribution_major_version == '6' or ansible_distribution_major_version == '7')
+  when: enable_pptpd_support and ansible_os_family == 'RedHat' and ansible_distribution_major_version >= '6'
 
-- name: RadiusDesk CoovaChilli Setup (Ubuntu)
+- name: RadiusDesk CoovaChilli Setup (Ubuntu 14+)
   include: "Coovachilli_Debian.yml"
-  when: enable_coovachilli_support and ansible_distribution == 'Ubuntu' and (ansible_distribution_version == '14.04' or ansible_distribution_version == '15.04' or ansible_distribution_version == '15.10')
+  when: enable_coovachilli_support and ansible_distribution == 'Ubuntu' and ansible_distribution_version >= '14.04'
 
-- name: RadiusDesk CoovaChilli Setup (RHEL/CentOS 6.x/7.x)
+- name: RadiusDesk CoovaChilli Setup (RHEL/CentOS 6+)
   include: "Coovachilli_RedHat.yml"
-  when: enable_coovachilli_support and ansible_os_family == 'RedHat' and (ansible_distribution_major_version == '6' or ansible_distribution_major_version == '7')
+  when: enable_coovachilli_support and ansible_os_family == 'RedHat' and ansible_distribution_major_version >= '6'
