--- a/roles/radiusdesk/vars/Debian.yml
+++ b/roles/radiusdesk/vars/Debian.yml
@@ -66,7 +66,7 @@ freeradius_pkgs:
 
 # Freeradius (Debian/Ubuntu)
 freeradius_conf_dir: "/etc/freeradius"
-freeradius_prefix_path: ""
+freeradius_prefix_path: "/usr"
 freeradius_sbin_dir: "/usr/sbin"
 freeradius_bin_dir: "/usr/bin"
 freeradius_shared_dir: "/usr/share/freeradius"
