--- a/roles/radiusdesk/vars/RedHat.yml
+++ b/roles/radiusdesk/vars/RedHat.yml
@@ -1,16 +1,9 @@
 ---
-# Apache (RHEL/CentOS 6.x/7.x)
+# Apache (RHEL/CentOS 6+)
 apache_pkg_name: httpd
 
-# RadiusDesk Packages (RHEL/CentOS 6.x/7.x)
+# RadiusDesk Packages (RHEL/CentOS 6+)
 rd_pkgs:
- - php-fpm
- - php-pear
- - php-gd
- - php-common
- - php-cli
- - php-mysql
- - php-xcache
  - mysql-server
  - mysql
  - subversion
@@ -30,7 +23,20 @@ rd_pkgs:
  - unzip
  - tar
 
-# Nginx (RHEL/CentOS 6.x/7.x)
+# RadiusDesk PHP5 Packages (RHEL/CentOS 6+)
+rd_php5_pkgs:
+ - php-fpm
+ - php-pear
+ - php-gd
+ - php-common
+ - php-cli
+ - php-mysql
+ - php-xcache
+
+# RadiusDesk PHP7 Packages (RHEL/CentOS 6+)
+rd_php7_pkgs: null
+
+# Nginx (RHEL/CentOS 6+)
 nginx_pkg_name: nginx
 nginx_service_name: nginx
 nginx_webroot: "/usr/share/nginx/html"
@@ -39,7 +45,7 @@ nginx_default_config: "/etc/nginx/conf.d/default.conf"
 nginx_worker_processes: 4
 nginx_user: nginx
 
-# PHP-FPM (RHEL/CentOS 6.x/7.x)
+# PHP-FPM (RHEL/CentOS 6+)
 php_fpm_service_name: php-fpm
 php_fpm_config: "/etc/php-fpm.d/www.conf"
 php_fpm_socket: "/var/run/php-fpm.sock"
@@ -47,14 +53,14 @@ php_session_save_path: "/var/lib/php/session"
 php_config_file: "/etc/php.ini"
 php_timezone: "Africa/Lagos"
 
-# Web server (RHEL/CentOS 6.x/7.x)
+# Web server (RHEL/CentOS 6+)
 web_user: apache
 web_group: apache
 
 # Temporary Download Directory
 temp_src_dir: "/tmp/rd_sources"
 
-# Radiusdesk Sources Repo Paths (RHEL/CentOS 6.x/7.x)
+# Radiusdesk Sources Repo Paths (RHEL/CentOS 6+)
 cakephp_git_repo: "https://github.com/cakephp/cakephp.git"
 rd_svn_repo: "http://svn.code.sf.net/p/radiusdesk/code/trunk/rd"
 rd_cake_svn_repo: "http://svn.code.sf.net/p/radiusdesk/code/trunk/rd_cake"
@@ -64,7 +70,7 @@ extjs_src_md5_sum: "e829741694be90a27d7f0c6a24dbfc8b"
 # rd_svn_revision: 1620
 rd_svn_revision: 1871
 
-# Freeradius Packages (RHEL/CentOS 6.x/7.x)
+# Freeradius Packages (RHEL/CentOS 6+)
 # freeradius_pkgs:
 #  - freeradius-2.2.9-1rd*
 #  - freeradius-mysql-2.2.9-1rd*
@@ -82,7 +88,7 @@ freeradius_pkgs:
  - freeradius-utils-3.0.11*
  - freeradius-krb5-3.0.11*
 
-# Freeradius (RHEL/CentOS 6.x/7.x)
+# Freeradius (RHEL/CentOS 6+)
 freeradius_conf_dir: "/etc/raddb"
 freeradius_prefix_path: "/usr"
 freeradius_sbin_dir: "/usr/sbin"
@@ -96,12 +102,12 @@ freeradius_radclient: "/usr/bin/radclient"
 freeradius_secret: "testing123"
 allow_vulnerable_openssl: yes
 
-# Radiusdesk Database (RHEL/CentOS 6.x/7.x)
+# Radiusdesk Database (RHEL/CentOS 6+)
 rd_db_user: rd
 rd_db_password: rd
 rd_db_name: rd
 
-# MySQL (RHEL/CentOS 6.x/7.x)
+# MySQL (RHEL/CentOS 6+)
 mysql_old_root_password: ""
 mysql_root_password: root
 mysql_service_name: mysqld
@@ -110,12 +116,12 @@ mysql_db_hosts:
  - localhost
 mysql_my_cnf: "~/.my.cnf"
 
-# Nodejs Packages (RHEL/CentOS 6.x/7.x)
+# Nodejs Packages (RHEL/CentOS 6+)
 nodejs_pkgs:
  - nodejs
  - npm
 
-# Nodejs Modules (RHEL/CentOS 6.x/7.x)
+# Nodejs Modules (RHEL/CentOS 6+)
 nodejs_npm_modules:
  - tail
  - connect
